# cyberm4fia-re

./: .gitignore  Cargo.toml  HANDOFF.txt  README.md
docs/superpowers/plans/: 2026-04-29-re-tool-v1-report-mode.md  2026-04-29-runtime-artifact-extractor.md
docs/superpowers/specs/: 2026-04-28-runtime-artifact-extractor-design.md  2026-04-29-re-tool-v1-report-mode-design.md
src/: lib.rs  main.rs
src/analysis/: cyberchef.rs  functions.rs  mod.rs  patterns.rs  report.rs  runtime.rs  runtime_artifacts.rs  runtime_report.rs  strings.rs  types.rs
src/binary/: elf.rs  macho.rs  mod.rs  parser.rs  pe.rs
src/decompiler/: ast.rs  c_generator.rs  c_syntax.rs  lifter.rs  mod.rs  optimization.rs  signatures.rs  string_refs.rs  structure.rs
src/disasm/: arm.rs  control_flow.rs  mod.rs  x86.rs
src/utils/: error.rs  mod.rs
