[package]
name = "decompiler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Binary format parsing
goblin = "0.8"

# Disassembly
iced-x86 = "1.21"
capstone = "0.11"

# Control flow graph
petgraph = "0.6"

# CLI interface
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Pattern matching
regex = "1.10"

# Web UI (optional, feature-gated)
axum = { version = "0.7", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[features]
default = []
web-ui = ["axum", "tokio", "tower", "tower-http"]

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "decompiler"
path = "src/main.rs"
